Try to add correlation support and switch to virtual threads